--- a/index.html
+++ b/index.html
@@ -3,47 +3,80 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Claus T</title>
-  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Claus Tonnemacher</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+  <div class="nav-container">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Polyglot Studios</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+  </div>
+
+
   <div class="top-container">
-    <img class="top-cloud" src="images/smallpenta2.png" alt="cloud-img">
+
     <div class="title-text">
-      <h1>Welcome</h1>
+      <h1>WELCOME</h1>
       <h2 class="tagline">I'm Claus, audio engineer at day and web developer at night...</h2>
     </div>
+
     <img class="bottom-cloud" src="images/smallpenta2.png" alt="cloud-img">
     <img class="mountain" src="images/smallpenta2.png" alt="mountain-img">
+    <img class="top-cloud" src="images/smallpenta2.png" alt="cloud-img">
+
   </div>
 
   <div class="middle-container">
     <div class="profile">
       <img src="images/profile.png" alt="profile-img">
-      <h2>ABOUT ME</h2>
+      <br>
+      <br>
+      <br>
+      <h2 class="about">ABOUT ME</h2>
+      <br>
       <p class="intro">Hailing from Namibia, founder of Polyglot Studios & a Web Developer in the making. I have a passion for all things music, art & technology. I bring with me many years of management experience in a studio environment.
         Currently I'm the operations manager at a leading film, series & animation dubbing studio. Deadline-driven, proactive and meticulous, a resourceful planner who leads by example and is skilled at delivering and completing multiple
         projects in challenging environments.
       </p>
     </div>
-
     <hr>
-
-    <div class="skill-row">
+    <div class="middle-mid-container">
       <h2>MY SKILLS</h2>
       <div class="skill-row">
         <img class="mixer" src="images/mixer.png" alt="mixer-img">
-
         <h3>Audio Engineering</h3>
         <p class="audio">Music has been with me from a very early age and studying audio engineering was a natural progression, since then I have been involved with audio engineering since I was 18 years old.</p>
-
       </div>
       <div class="skill-row">
         <img class="code" src="images/code.png" alt="code-img">
