--- a/index.html
+++ b/index.html
@@ -45,16 +45,14 @@
 
 
   <div class="top-container">
-
     <div class="title-text">
       <h1>WELCOME</h1>
       <h2 class="tagline">I'm Claus, audio engineer at day and web developer at night...</h2>
     </div>
 
-    <img class="bottom-cloud" src="images/smallpenta2.png" alt="cloud-img">
-    <img class="mountain" src="images/smallpenta2.png" alt="mountain-img">
-    <img class="top-cloud" src="images/smallpenta2.png" alt="cloud-img">
-
+    <img class="bottom-cloud" src="images/polylogo.png" alt="cloud-img">
+    <img class="mountain" src="images/polylogo.png" alt="mountain-img">
+    <img class="top-cloud" src="images/polylogo.png" alt="cloud-img">
   </div>
 
   <div class="middle-container">
