--- a/projects.html
+++ b/projects.html
@@ -15,25 +15,26 @@
     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262262978&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
   <div
     style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #cccccc; text-decoration: none;">SOUND_RIPPLE_STUDIOS</a> · <a href="https://soundcloud.com/sound_ripple_studios/parallel-worlds"
-      title="Parallel Worlds" target="_blank" style="color: #cccccc; text-decoration: none;">Parallel Worlds</a>
+    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #f05454; text-decoration: none;">POLYGLOT STUDIOS</a> · <a href="https://soundcloud.com/sound_ripple_studios/parallel-worlds"
+      title="Parallel Worlds" target="_blank" style="color: #f05454; text-decoration: none;">Parallel Worlds</a>
   </div>
   </iframe>
-
+  <br>
   <iframe width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay"
     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262262977&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
   <div
     style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #cccccc; text-decoration: none;">SOUND_RIPPLE_STUDIOS</a> · <a href="https://soundcloud.com/sound_ripple_studios/the-resurrection"
-      title="The Resurrection" target="_blank" style="color: #cccccc; text-decoration: none;">The Resurrection</a>
+    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #f05454; text-decoration: none;">POLYGLOT STUDIOS</a> · <a href="https://soundcloud.com/sound_ripple_studios/the-resurrection"
+      title="The Resurrection" target="_blank" style="color: #f05454; text-decoration: none;">The Resurrection</a>
   </div>
-
+  <br>
   <iframe width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay"
     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262262975&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
   <div
     style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #cccccc; text-decoration: none;">SOUND_RIPPLE_STUDIOS</a> · <a
-      href="https://soundcloud.com/sound_ripple_studios/tripping-harmonically" title="Tripping Harmonically" target="_blank" style="color: #cccccc; text-decoration: none;">Tripping Harmonically</a></div>
+    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #f05454; text-decoration: none;">POLYGLOT STUDIOS</a> · <a
+      href="https://soundcloud.com/sound_ripple_studios/tripping-harmonically" title="Tripping Harmonically" target="_blank" style="color: #f05454; text-decoration: none;">Tripping Harmonically</a>
+  </div>
   <!-- <h2 class="contact-tagline">Stay tuned...</h2> -->
 
   <br>
