--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Claus Tonnemacher</title>
+  <title>Polyglot Studios</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -97,7 +97,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/claustonnemacher">LinkedIn</a>
-    <a class="footer-link" href="https://www.polyglotstudios.com/">Polyglot Studios</a>
+    <!-- <a class="footer-link" href="https://www.polyglotstudios.com/">Polyglot Studios</a> -->
     <p class="copyright">© 2021 designed & developed by Claus Tonnemacher @ Polyglot Studios.</p>
   </div>
 </body>
