--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Polyglot Studios</title>
+  <title>Claus Tonnemacher</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Polyglot Studios</a>
+        <a class="navbar-brand" href="#">Claus Tonnemacher</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -97,8 +97,8 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/claustonnemacher">LinkedIn</a>
-    <!-- <a class="footer-link" href="https://www.polyglotstudios.com/">Polyglot Studios</a> -->
-    <p class="copyright">© 2021 designed & developed by Claus Tonnemacher @ Polyglot Studios.</p>
+    <a class="footer-link" href="https://www.polyglotstudios.com/">Polyglot Studios</a>
+    <p class="copyright">© 2021 designed & developed by Claus Tonnemacher</p>
   </div>
 </body>
 
