--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div class="nav-container">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:#000000">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Claus Tonnemacher</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,14 +28,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" "nav-link" aria-current="page" href=index.html>Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/projects.html">Projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="/contact.html">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -47,12 +47,12 @@
   <div class="top-container">
     <div class="title-text">
       <h1>WELCOME</h1>
-      <h2 class="tagline">I'm Claus, audio engineer at day and web developer at night...</h2>
+      <h2 class="tagline">I'm Claus, audio engineer at day and web developer at night.</h2>
     </div>
 
-    <img class="bottom-cloud" src="images/polylogo.png" alt="cloud-img">
-    <img class="mountain" src="images/polylogo.png" alt="mountain-img">
-    <img class="top-cloud" src="images/polylogo.png" alt="cloud-img">
+    <img class="bottom-cloud" src="images/skullyellow.png" alt="cloud-img">
+    <img class="mountain" src="images/skullpurple.png" alt="mountain-img">
+    <img class="top-cloud" src="images/skullblue.png" alt="cloud-img">
   </div>
 
   <div class="middle-container">
@@ -63,7 +63,7 @@
       <br>
       <h2 class="about">ABOUT ME</h2>
       <br>
-      <p class="intro">Hailing from Namibia, founder of Polyglot Studios & a Web Developer in the making. I have a passion for all things music, art & technology. I bring with me many years of management experience in a studio environment.
+      <p class="intro">Hailing from Namibia, founder of Polyglot Studios. I'm a Web Developer in the making. I have a passion for all things music, art & technology. I bring with me many years of management experience in a studio environment.
         Currently I'm the operations manager at a leading film, series & animation dubbing studio. Deadline-driven, proactive and meticulous, a resourceful planner who leads by example and is skilled at delivering and completing multiple
         projects in challenging environments.
       </p>
@@ -90,7 +90,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <p class="contact-message">If you would like to work on a project together, please get in touch.</p>
-      <a class="btn" href="mailto:claus.tonnemacher@gmail.com">CONTACT ME</a>
+      <a class="btn" href="mailto:hello@claustonnemacher.com">CONTACT ME</a>
     </div>
   </div>
 
