--- a/projects.html
+++ b/projects.html
@@ -6,39 +6,61 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <title>Contact</title>
 </head>
 
+<div class="nav-container">
+
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color:#000000">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Claus Tonnemacher</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" "nav-link" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/projects.html">Projects</a>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </li> -->
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+</div>
+
 <body class="contact-style">
   <h1 class="contact-heading">Projects</h1>
-  <iframe width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262262978&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+  <iframe width="60%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262262978&color=%23a162e8&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
   <div
-    style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #f05454; text-decoration: none;">POLYGLOT STUDIOS</a> · <a href="https://soundcloud.com/sound_ripple_studios/parallel-worlds"
-      title="Parallel Worlds" target="_blank" style="color: #f05454; text-decoration: none;">Parallel Worlds</a>
-  </div>
-  </iframe>
-  <br>
-  <iframe width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262262977&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-  <div
-    style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #f05454; text-decoration: none;">POLYGLOT STUDIOS</a> · <a href="https://soundcloud.com/sound_ripple_studios/the-resurrection"
-      title="The Resurrection" target="_blank" style="color: #f05454; text-decoration: none;">The Resurrection</a>
+    style="font-size: 12px; color: #f093b0;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #cccccc; text-decoration: none;">SOUND_RIPPLE_STUDIOS</a> · <a href="https://soundcloud.com/sound_ripple_studios/parallel-worlds"
+      title="Parallel Worlds" target="_blank" style="color: #cccccc; text-decoration: none;">Parallel Worlds</a>
   </div>
   <br>
-  <iframe width="50%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262262975&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+  <iframe width="60%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262262977&color=%23a162e8&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
   <div
-    style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #f05454; text-decoration: none;">POLYGLOT STUDIOS</a> · <a
-      href="https://soundcloud.com/sound_ripple_studios/tripping-harmonically" title="Tripping Harmonically" target="_blank" style="color: #f05454; text-decoration: none;">Tripping Harmonically</a>
+    style="font-size: 12px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #cccccc; text-decoration: none;">SOUND_RIPPLE_STUDIOS</a> · <a href="https://soundcloud.com/sound_ripple_studios/the-resurrection"
+      title="The Resurrection" target="_blank" style="color: #cccccc; text-decoration: none;">The Resurrection</a>
   </div>
+  <br>
+  <iframe width="60%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262262975&color=%23a162e8&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+  <div
+    style="font-size: 12px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+    <a href="https://soundcloud.com/sound_ripple_studios" title="SOUND_RIPPLE_STUDIOS" target="_blank" style="color: #cccccc; text-decoration: none;">SOUND_RIPPLE_STUDIOS</a> · <a
+      href="https://soundcloud.com/sound_ripple_studios/tripping-harmonically" title="Tripping Harmonically" target="_blank" style="color: #cccccc; text-decoration: none;">Tripping Harmonically</a></div>
   <!-- <h2 class="contact-tagline">Stay tuned...</h2> -->
-
-  <br>
-  <br>
   <br>
   <a class="btn" href="index.html">HOME</a>
 </body>
