--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       <h2 class="tagline">I'm Claus, audio engineer at day and web developer at night.</h2>
     </div>
 
-    <img class="bottom-cloud" src="images/skullyellow.png" alt="cloud-img">
-    <img class="mountain" src="images/skullpurple.png" alt="mountain-img">
-    <img class="top-cloud" src="images/skullblue.png" alt="cloud-img">
+    <img class="bottom-cloud" src="images/skulls/pink.png" alt="cloud-img">
+    <img class="mountain" src="images/skulls/aqua.png" alt="mountain-img">
+    <img class="top-cloud" src="images/skulls/green.png" alt="cloud-img">
   </div>
 
   <div class="middle-container">
